syntax = "proto3";

option java_multiple_files = true;
option java_outer_classname = "LiveConfigurationProto";
option objc_class_prefix = "HLW";

package com.sayurbox.config4live;

service LiveConfiguration {
  // Find config by name
  rpc FindConfig (ConfigRequest) returns (ConfigResponse) {}
}

message ConfigRequest {
  string name = 1;
}

message ConfigResponse {
  string id = 1;
  string name = 2;
  string value = 3;
  string description = 4;
  enum Format {
    text = 0;
    number = 1;
    bool = 2;
    json = 3;
  }
  Format format = 5;
  string owner = 6;
}
